# django-mapstore-adapter

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.rst  requirements.txt  setup.cfg  tox.ini
mapstore2_adapter/: __init__.py  apps.py  context_processors.py  settings.py  urls.py  utils.py
mapstore2_adapter/api/: serializers.py  urls.py  views.py
mapstore2_adapter/geoapps/geostories/: __init__.py  models.py
mapstore2_adapter/geoapps/geostories/api/: serializers.py
mapstore2_adapter/plugins/: geonode.py  serializers.py
tests/: settings.py  test_converters.py  test_plugins.py  test_settings.py  test_utils.py  urls.py
