[metadata]
name = django-mapstore-adapter
version = 1.0.17
description = Django MapStore2 Adapter
author = Alessio Fabiani
author_email = alessio.fabiani@geo-solutions.it
url = https://github.com/GeoNode/django-mapstore-adapter
download_url = https://github.com/GeoNode/django-mapstore-adapter/tarball/master
keywords = django, mapstore, mapstore2
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django >= 1.11
	requests >= 2.13.0
    Markdown
    MarkupSafe
    djangorestframework >= 3.8.2
    jsonfield
    urllib3 >= 1.25

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude=mapstore2_adapter/*/migrations/*,management,scripts,docs,static,migrations,mapstore2_adapter/*settings.py
ignore=E121,E122,E124,E126,E226
